kubernetes/deploy/full.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backman
  namespace: backman
  labels:
    app: backman
    app.kubernetes.io/name: backman
    app.kubernetes.io/component: gui
spec:
  selector:
    matchLabels:
      app: backman
      app.kubernetes.io/name: backman
      app.kubernetes.io/component: gui
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backman
        app.kubernetes.io/name: backman
        app.kubernetes.io/component: gui
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: backman
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
      - name: backman
        image: jamesclonk/backman:latest
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        command:
        - backman
        args:
        - -config
        - /backman/config.json
        resources:
          requests:
            memory: 1Gi
            cpu: 250m
          limits:
            memory: 2Gi
            cpu: 1000m
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
        livenessProbe:
          initialDelaySeconds: 15
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - mountPath: /backman/config.json
          name: backman-secret
          subPath: config.json
        - mountPath: /bindings/my-postgres
          name: my-postgres
        - mountPath: /bindings/my-mysql
          name: my-mysql
        - mountPath: /bindings/my-mongodb
          name: my-mongodb
        - mountPath: /bindings/my-redis
          name: my-redis
        - mountPath: /bindings/my-elasticsearch
          name: my-elasticsearch
      volumes:
      - name: backman-secret
        secret:
          secretName: backman
      - name: my-postgres
        secret:
          secretName: my-postgres
      - name: my-mysql
        secret:
          secretName: my-mysql
      - name: my-mongodb
        secret:
          secretName: my-mongodb
      - name: my-redis
        secret:
          secretName: my-redis
      - name: my-elasticsearch
        secret:
          secretName: my-elasticsearch
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backman
  namespace: backman
  labels:
    app: backman
    app.kubernetes.io/name: backman
    app.kubernetes.io/component: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - secretName: backman-tls
    hosts:
    - backman.swisscom.com
  rules:
  - host: backman.swisscom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backman
            port:
              number: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: backman
  labels:
    app: backman
    app.kubernetes.io/name: backman
    app.kubernetes.io/component: namespace
    namespace.kubernetes.io/name: backman
  namespace: backman
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backman
  namespace: backman
  labels:
    app: backman
    app.kubernetes.io/name: backman
    app.kubernetes.io/component: netpol
spec:
  podSelector:
    matchLabels:
      app: backman
      app.kubernetes.io/name: backman
      app.kubernetes.io/component: gui
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 8080
  - from:
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: ingress-nginx
      podSelector: {}
    ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backman
  namespace: backman
  labels:
    app: backman
    app.kubernetes.io/name: backman
    app.kubernetes.io/component: svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: backman
    app.kubernetes.io/name: backman
    app.kubernetes.io/component: gui
